--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ on:
 permissions:
   contents: write
 
+env:
+  API_KEY: ${{ secrets.API_KEY }}
+
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -31,4 +34,4 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISHER_TOKEN }}
-          API_KEY: ${{ secrets.API_KEY }}
+
