--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Debug environment
         run: env | grep CHECK
         env:
-          API_KEY: ${{ secrets.CHECK }}
+          CHECK: ${{ secrets.CHECK }}
 
 
 
